--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,6 +24,13 @@ package-dir = {"" = "src"}
 [tool.setuptools.packages.find]
 where = ["src"]
 
+[tool.ruff]
+line-length = 100
+target-version = "py312"
+
+[tool.ruff.lint]
+select = ["E", "F", "I", "UP"]
+
 [dependency-groups]
 dev = [
     "ipykernel>=7.1.0",
